tests/semantic/valid/10_const_chain.tc
// 测试10: 常量依赖链
// 目标：验证const初始化可以引用前面已声明的常量
const int A = 1;
const int B = A + 2;     // B = 3
const int C = B * 3;     // C = 9
const int D = C - 4;     // D = 5

int main(void) {
    return D;  // 期望: 5
}
